# rust-editor

./: 1.worker.js  235.js  300.js  Cargo.toml  README.md  index.js  renovate.json  wasm.js  wasm.worker.js
.github/workflows/: check.yml  demo.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/unix/: filer.rs  input.rs  mod.rs  output.rs
core/: Cargo.toml
core/src/: ansi_escape.rs  decode.rs  document.rs  editor.rs  error.rs  input_unix.rs  languages.rs  lib.rs  main.rs  output_unix.rs  tokenizer.rs  traits.rs
core/src/unix/: filer.rs  mod.rs
src/: ansi_escape.rs  document.rs  editor.rs  error.rs  filer.rs  input_trait.rs  input_unix.rs  lib.rs  main.rs  output_trait.rs  output_unix.rs  traits.rs
web/: Cargo.toml  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/js/: index.ts  worker.ts
web/src/: filer.rs  input.rs  lib.rs  output.rs  xterm.rs
web/static/: index.html
