[package]
name = "core"
version = "0.1.0"
authors = ["inokawa <48897392+inokawa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.1"
unicode-width = "0.1.10"
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
