[package]
name = "web"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
#default = ["wee_alloc"]

[dependencies]
core = { path = "../core" }
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wee_alloc = { version = "0.4.5", optional = true }
futures = "0.3.29"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
